Maybe fixed overlap problem?

--- a/public/resources/style.css
+++ b/public/resources/style.css
@@ -277,6 +277,7 @@ div.tooltip {
     height:75%;
     overflow-y:auto;
     overflow-x:hidden;
+    opacity: 0.9;
 }
 
 #description{
@@ -297,6 +298,7 @@ div.tooltip {
     right: 0;
     top:0;
     margin-top: 52px;
+    margin-right: 15px;
     background: white;
 }
 
